force-app/main/default/objects/MapArea__c/MapArea__c.object-meta.xml
<CustomObject>
    <description>Custom geographic area used to locate an opportunity, a technical project, a cadastral parcel, or to track citizen or technical requests on the map.</description>
    <label>Map Area</label>
    <nameField>
        <label>Map Area Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Map Areas</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>