force-app/main/default/objects/MapArea__c/fields/Case_Relation__c.field-meta.xml
<CustomField>
    <fullName>Case_Relation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to Case object for MapArea mapping</description>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Map Area</relationshipLabel>
    <relationshipName>MapArea</relationshipName>
    <type>Lookup</type>
</CustomField>