force-app/main/default/objects/MapArea__c/fields/EndDateTime__c.field-meta.xml
<CustomField>
    <fullName>EndDateTime__c</fullName>
    <description>End date and time for geographic data collection</description>
    <label>End Date Time</label>
    <type>DateTime</type>
</CustomField>