force-app/main/default/objects/MapArea__c/fields/FullAddress__c.field-meta.xml
<CustomField>
    <fullName>FullAddress__c</fullName>
    <description>Full address of the location, obtained through reverse geocoding</description>
    <inlineHelpText>Complete address of the location</inlineHelpText>
    <label>Full Address</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>