force-app/main/default/objects/MapArea__c/fields/GeoJSON__c.field-meta.xml
<CustomField>
    <fullName>GeoJSON__c</fullName>
    <description>GeoJSON data for map representation</description>
    <label>GeoJSON</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>