force-app/main/default/objects/MapArea__c/fields/GeometryType__c.field-meta.xml
<CustomField>
    <fullName>GeometryType__c</fullName>
    <description>Type of geometry (point, line, polygon, rectangle, circle)</description>
    <label>Geometry Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Geometry_Type</valueSetName>
    </valueSet>
</CustomField>