force-app/main/default/objects/MapArea__c/fields/Lead_Relation__c.field-meta.xml
<CustomField>
    <fullName>Lead_Relation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to Lead object for MapArea mapping</description>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Map Area</relationshipLabel>
    <relationshipName>MapArea</relationshipName>
    <type>Lookup</type>
</CustomField>