force-app/main/default/objects/MapArea__c/fields/Opportunity_Relation__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Relation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to Opportunity object for MapArea mapping</description>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Map Area</relationshipLabel>
    <relationshipName>MapArea</relationshipName>
    <type>Lookup</type>
</CustomField>