force-app/main/default/objects/MapArea__c/fields/StartDateTime__c.field-meta.xml
<CustomField>
    <fullName>StartDateTime__c</fullName>
    <description>Start date and time for geographic data collection</description>
    <label>Start Date Time</label>
    <type>DateTime</type>
</CustomField>