force-app/main/default/objects/MapArea__c/listViews/Nids_de_poule.listView-meta.xml
<ListView>
    <fullName>Nids_de_poule</fullName>
    <columns>NAME</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>FullAddress__c</columns>
    <columns>GeoJSON__c</columns>
    <columns>GeometryType__c</columns>
    <filterScope>Everything</filterScope>
    <label>Nids-de-poule</label>
</ListView>